2012-01-27 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-core-utils.c (na_core_utils_str_subst): Fix description.

	* src/api/na-iexporter.h: Fix NAIExporterFormat description.

	* src/api/na-iexporter.h: Update interface description, including the
	list of currently allocated export format identifiers.

	* docs/export-format-id: Removed file.

	* docs/Makefile.am: Updated accordingly.

	* src/core/na-export-format.c:
	* src/core/na-export-format.h (na_export_format_new):
	* src/core/na-exporter.c:
	* src/io-desktop/nadp-formats.c:
	* src/io-desktop/nadp-writer.c:
	* src/io-desktop/nadp-writer.h:
	* src/io-xml/naxml-formats.c:
	* src/io-xml/naxml-writer.c:
	* src/io-xml/naxml-writer.h:
	Rename NAIExporterFormatExt structure as NAIExporterFormatv2.

	* docs/reference/nautilus-actions-sections.txt: Update sections.

	* src/api/na-iimporter.h:
	* src/core/na-iimporter.c: Update interface description.

	* src/io-desktop/nadp-reader.c:
	* src/io-desktop/nadp-reader.h (nadp_reader_iimporter_import_from_uri):
	* src/io-xml/naxml-reader.c:
	* src/io-xml/naxml-reader.h (naxml_reader_import_from_uri):
	Updated accordingly.

	* src/api/na-iio-provider.h: better distinguish own internal comments.

	* docs/reference/nautilus-actions-overrides.txt:
	(NAIImporterCheckFn, NAIImporterAskUserFn): Mark the typedefs as deprecated.

	* docs/reference/nautilus-actions-docs.xml: Fix typo.

	* src/api/na-iio-provider.h: Update interface description, including the
	list of currently allocated I/O provider identifiers.

	* src/core/na-iio-provider.c:
	(interface_base_init): Update signal description.
	(na_iio_provider_item_changed): Update function description.

	* docs/io-provider-id: Deleted file.

	* docs/Makefile.am: Updated accordingly.

	* docs/reference/nautilus-actions-docs.xml:
	Define new nact entity.
	Update the link to online Reference Manual.
	Bump copyright year.

2012-01-25 Pierre Wieser <pwieser@trychlos.org>

	* Makefile.am: Also distributes ChangeLog-2011.
